@@ -43,6 +43,7 @@ Note that the following bug and feature requests are logged in GForge with relat
  [#494] looses localIRODSTransfer data on final update
  [#496] BAD_INPUT_DESC_INDEX errors are being sent to irods client
   [#502] bug in synch
+   [#519] tolerate quote in data name for acl query
 
 ==Features==
 
